<resources>
    <string name="app_name">KotlinPPS</string>
    <string name="external_log_in_error">An error occurred trying to log in</string>
    <string name="log_in_success">Log In Successful</string>
    <string name="sign_in_success">Sign In Successful</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_log_in">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="local_email_error">There is no account with that email signed in</string>
    <string name="local_log_in_error">The password is incorrect</string>
    <string name="title_email">Email</string>
    <string name="title_pass">Password</string>
    <string name="title_pass_rep">Repeat Password</string>
    <string name="title_name">Name</string>
    <string name="title_surname">Surname</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_passwordrep_badmatch">Passwords do not match</string>
    <string name="error_emailformat">The email must have a valid format</string>
    <string name="error_user_already_exists">That user is already registered</string>
    <string name="error_signup_missing_field">All fields must be filled</string>
    <string name="msg_on_valid_signup">Succesful user registration</string>
    <string name="btn_log_out">Log Out</string>
    <string name="facebook_app_id">396924180910511</string>
    <string name="fb_login_protocol_scheme">fb396924180910511</string>

</resources>
