<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:id="@+id/signup_activity_et_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email" />

        <EditText
            android:id="@+id/signup_activity_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:id="@+id/signup_activity_et_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pass" />

        <EditText
            android:id="@+id/signup_activity_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:id="@+id/signup_activity_et_pass_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pass_rep" />

        <EditText
            android:id="@+id/signup_activity_text_pass_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:id="@+id/signup_activity_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name" />

        <EditText
            android:id="@+id/signup_activity_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:id="@+id/signup_activity_et_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_surname" />

        <EditText
            android:id="@+id/signup_activity_text_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_activity_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/signup_activity_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sign_up" />
    </LinearLayout>

</TableLayout>
