<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/mainscreen_activity_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_email" />

        <TextView
            android:id="@+id/mainscreen_activity_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pass" />

        <TextView
            android:id="@+id/mainscreen_activity_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name" />

        <TextView
            android:id="@+id/mainscreen_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/signup_activity_horizontal_margin"
        android:layout_marginVertical="@dimen/signup_activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_surname" />

        <TextView
            android:id="@+id/mainscreen_activity_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/mainscreen_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_log_out"
        app:layout_constraintTop_toBottomOf="@+id/mainscreen_activity_table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
